norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__Move: D .snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
      [38;2;217;39;39m██[39m[38;2;217;39;39m██[39m[38;2;217;39;39m██[39m
      [38;2;79;123;212m██[39m[38;2;79;123;212m██[39m[38;2;79;123;212m██[39m
      [38;2;79;123;212m██[39m[38;2;79;123;212m██[39m[38;2;79;123;212m██[39m
      [38;2;250;250;250m██[39m[38;2;250;250;250m██[39m[38;2;250;250;250m██[39m
      [38;2;250;250;250m██[39m[38;2;250;250;250m██[39m[38;2;250;250;250m██[39m
      [38;2;250;250;250m██[39m[38;2;250;250;250m██[39m[38;2;250;250;250m██[39m
[38;2;255;153;12m██[39m[38;2;255;153;12m██[39m[38;2;255;153;12m██[39m[38;2;109;242;116m██[39m[38;2;109;242;116m██[39m[38;2;109;242;116m██[39m[38;2;217;39;39m██[39m[38;2;217;39;39m██[39m[38;2;217;39;39m██[39m
[38;2;255;153;12m██[39m[38;2;255;153;12m██[39m[38;2;255;153;12m██[39m[38;2;109;242;116m██[39m[38;2;109;242;116m██[39m[38;2;109;242;116m██[39m[38;2;217;39;39m██[39m[38;2;217;39;39m██[39m[38;2;217;39;39m██[39m
[38;2;79;123;212m██[39m[38;2;79;123;212m██[39m[38;2;79;123;212m██[39m[38;2;255;153;12m██[39m[38;2;255;153;12m██[39m[38;2;255;153;12m██[39m[38;2;109;242;116m██[39m[38;2;109;242;116m██[39m[38;2;109;242;116m██[39m
      [38;2;255;224;0m██[39m[38;2;255;224;0m██[39m[38;2;255;224;0m██[39m
      [38;2;255;224;0m██[39m[38;2;255;224;0m██[39m[38;2;255;224;0m██[39m
      [38;2;255;224;0m██[39m[38;2;255;224;0m██[39m[38;2;255;224;0m██[39m
